[gd_scene load_steps=3 format=3 uid="uid://dnwd4iberh8eq"]

[ext_resource type="Script" path="res://addons/Mushroom/DialogManager/Editor/Commands/ChoiceControl.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://drw0oy5hhjflj" path="res://addons/Mushroom/DialogManager/Editor/Scenes/ConditionContainer.tscn" id="2_fvplh"]

[node name="Control" type="VBoxContainer" node_paths=PackedStringArray("choice_text", "next_block_menu", "next_index_text", "delete_choice", "is_cond", "cond_box", "cond_editors_container")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")
choice_text = NodePath("HBoxContainer/ChoiceText")
next_block_menu = NodePath("HBoxContainer2/NextBlockList")
next_index_text = NodePath("HBoxContainer3/NextIndex")
delete_choice = NodePath("HBoxContainer4/DeleteChoice")
is_cond = NodePath("IsCondCheckBox")
cond_box = NodePath("HBoxContainer5/CondVBoxContainer")
cond_editors_container = NodePath("HBoxContainer5/CondVBoxContainer/CondEditorsContainer")

[node name="Panel2" type="Panel" parent="."]
modulate = Color(0, 0.6, 1, 1)
custom_minimum_size = Vector2(0, 2.6)
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeleteChoice" type="Button" parent="HBoxContainer4"]
layout_mode = 2
text = "X"

[node name="IsCondCheckBox" type="CheckButton" parent="."]
layout_mode = 2
text = "Conditional Command"

[node name="HBoxContainer5" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 30

[node name="CondVBoxContainer" parent="HBoxContainer5" instance=ExtResource("2_fvplh")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Choice Text"

[node name="ChoiceText" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Next Block"

[node name="NextBlockList" type="MenuButton" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
flat = false

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer3"]
layout_mode = 2
text = "Next Index "

[node name="NextIndex" type="SpinBox" parent="HBoxContainer3"]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer4/DeleteChoice" to="." method="_on_delete_choice_pressed"]
[connection signal="toggled" from="IsCondCheckBox" to="." method="_on_is_cond_checkbox_toggled"]
[connection signal="text_changed" from="HBoxContainer/ChoiceText" to="." method="_on_choicetext_text_changed"]
[connection signal="about_to_popup" from="HBoxContainer2/NextBlockList" to="." method="_on_next_blocklist_about_to_show"]
[connection signal="value_changed" from="HBoxContainer3/NextIndex" to="." method="_on_next_index_value_changed"]

[editable path="HBoxContainer5/CondVBoxContainer"]
